--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -61,3 +61,25 @@
     border: #fad249;
     border-radius: 60%;
 }
+
+@media screen and (max-width:780px) {
+    .login-wrapper{
+        background-color: gainsboro;
+        border: none;
+        height: 60%;
+        width: 60%;
+    }
+    .login-circle{
+        display: none;
+    }
+    .login-label{
+        color: #ef673c;
+        font-weight: larger;
+        font-size: larger;
+    }
+    .login-h1{
+        margin-top: 30px;
+        font-weight: normal;
+        color: black;
+    }
+  }
